--- a/portfolio/tsconfig.app.json
+++ b/portfolio/tsconfig.app.json
@@ -5,8 +5,6 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "rootDir": "./src",
-    
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -22,5 +20,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["./src/**/*"]
+  "include": ["src"]
 }
