--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/montserrat": "^5.1.0",
+    "@fontsource/poppins": "^5.1.0",
     "framer-motion": "^11.5.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
