--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "react-social-icons": "^6.18.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
