--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -17,6 +17,7 @@
     "@fontsource/hind": "^5.1.0",
     "@fontsource/montserrat": "^5.1.0",
     "@fontsource/poppins": "^5.1.0",
+    "formik": "^2.4.6",
     "framer-motion": "^11.5.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
