--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -21,7 +21,9 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.5.4",
     "localforage": "^1.10.0",
+    "mailersend": "^2.3.0",
     "match-sorter": "^6.3.4",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
