--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -18,10 +18,17 @@
     "@fontsource/montserrat": "^5.1.0",
     "@fontsource/poppins": "^5.1.0",
     "@sanity/client": "^6.22.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.5.4",
     "localforage": "^1.10.0",
     "mailersend": "^2.3.0",
+    "mailtrap": "^3.4.0",
     "match-sorter": "^6.3.4",
     "nodemailer": "^6.9.16",
     "react": "^18.3.1",
@@ -44,5 +51,10 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
