--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "@fastify/cors": "^10.0.1",
     "@sinclair/typebox": "^0.34.3",
     "fastify": "^5.1.0",
-    "mailtrap": "^3.4.0"
+    "mailtrap": "^3.4.0",
+    "@types/node": "^22.9.0",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
