--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p tsconfig.json",
-    "start": "ts-node index.ts",
+    "start": "nodemon --exec npx ts-node index.ts",
     "dev": "nodemon index.ts"
   },
   "keywords": [],
