--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^6.26.2",
     "react-simple-image-slider": "^2.4.1",
     "react-social-icons": "^6.18.0",
+    "react-toastify": "^11.0.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
