--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "@fastify/cors": "^10.0.1",
     "@sinclair/typebox": "^0.34.3",
+    "@types/node": "^22.9.0",
+    "dotenv": "^16.4.7",
     "fastify": "^5.1.0",
     "mailtrap": "^3.4.0",
-    "@types/node": "^22.9.0",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
