--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^10.0.1",
+    "@fastify/type-provider-typebox": "^5.1.0",
     "@sinclair/typebox": "^0.34.3",
     "@types/node": "^22.9.0",
     "dotenv": "^16.4.7",
